--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+* {
+	margin: 0;
+	padding: 0;
+}
 a {
 	color: black;
 }
@@ -25,7 +29,7 @@ a:link {
 }
 
 #userMenu ul {
-	margin-top: 10px;
+
 }
 
 #userMenu ul li {
@@ -132,15 +136,64 @@ a:link {
 }
 
 #mainMenu {
-	background-color: blue;
+	background-color: #FF9999;
 }
 
 #mainMenu ul {
-	background-color: red;
-	margin-top: 10px;
+	position: absolute;
+	bottom: 0px;
+	margin-bottom: 0px;
+	margin-left: 20px;
 }
 
 #mainMenu ul li {
 	display: inline-block;
-	margin-right: 3px;
+	margin-right: 18px;
+	font-size: 1.5em;
+	font-weight: 1000;
+}
+
+#mainLogoWrap {
+	vertical-align: top;
+	display: inline-block;
+	position: relative;
+	min-width:120px;
+	width:120px;
+	height:80px;
+	background-color: #99FFAA;
+	margin-right: -4px;
+}
+
+#mainLogo{
+	position:absolute;
+	bottom:0;
+	margin:auto;
+	max-width: 100%;
+}
+
+.gnbMenuWrap{
+	padding-left:10px;
+	vertical-align: top;
+	display: inline-block;
+	position:relative;
+	width: calc(100% - 120px);
+	min-width:1036px;
+	height: 80px;
+	background-color: #CC66FF;
+}
+
+#gnb{
+	width:100%;
+	min-width:1000px;
+	margin-top: 10px;
+	height: 80px;
+	background-color: #FF6680;
+}
+
+#contents{
+
+}
+
+.container-fluid{
+	width: 1280px;
 }
