--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
-
 * {
-	margin: 0;
 	padding: 0;
+	margin: 0;
 }
 a {
 	color: black;
@@ -151,7 +150,18 @@ ul#mainMenuList {
 	margin-right: 18px;
 	font-size: 1.5em;
 	font-weight: 1000;
-	float: left;
+}
+
+#mainMenuList > li > a{
+	text-decoration: none;
+}
+
+#mainMenuList > li > a:hover{
+	color: #f52390;
+}
+
+.selectedMainMenu{
+	color: #f52390;
 }
 
 #mainLogoWrap {
@@ -163,6 +173,7 @@ ul#mainMenuList {
 	height:80px;
 	background-color: #99FFAA;
 	margin-right: -4px;
+	border-bottom: 2px #f52390 solid;
 }
 
 #mainLogo{
@@ -172,7 +183,7 @@ ul#mainMenuList {
 	max-width: 100%;
 }
 
-.gnbMenuWrap{
+.gnbMenuWrap {
 	padding-left:10px;
 	vertical-align: top;
 	display: inline-block;
@@ -180,7 +191,7 @@ ul#mainMenuList {
 	width: calc(100% - 120px);
 	min-width:1036px;
 	height: 80px;
-	background-color: #CC66FF;
+	border-bottom: 2px #f52390 solid;
 }
 
 #gnb{
@@ -188,7 +199,6 @@ ul#mainMenuList {
 	min-width:1000px;
 	margin-top: 10px;
 	height: 80px;
-	background-color: #FF6680;
 }
 
 #contents{
@@ -198,19 +208,53 @@ ul#mainMenuList {
 .container-fluid{
 	width:100%;
 	min-width: 1280px;
+	padding: 0;
 }
 
 .subMenu {
-	padding:15px 0px 5px 0px;
+	display : none;
+	padding:10px 0px 5px 0px;
 	position: absolute;
-	top:100px;
+	top:30px;
 	left:0;
-	width: 1000px;
+	min-width: 1000px;
+	background-color: #CC66FF;
+	border: 2px #f52390 solid;
+	border-top: 1px white solid;
+	border-radius: 0 0 10px 10px;
 }
-.subMenu div ul {
+
+.subMenuListWrap{
+	display: inline-block;
+	vertical-align:top;
+	width: 30%;
+}
+
+.subMenuList {
 	list-style-type: none;
+	margin-left: 15px;
 }
-.subMenu div ul li a:link {
+
+.subMenu div ul li{
+	margin-bottom: 3px;
+}
+
+.subMenuList > li > a{
 	text-decoration: none;
 	color: black;
+}
+
+.subMenuList > li > a:hover{
+	color: red;
+}
+
+.subMenuSelected{
+	color: red;
+}
+.subMenuContents{
+	display: inline-block;
+	vertical-align:top;
+	width: calc(70% - 50px);
+	height:300px;
+	background-color: blue;
 }
